--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -20,6 +20,6 @@
     <%= f.text_area :message %>
   </div>
   <div class="actions">
-    <%= f.submit "Create Entry" %>
+    <%= f.submit "Create Entry", :class => 'submit-button' %>
   </div>
 <% end %>
