--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@entry) do |f| %>
   <% if @entry.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@entry.errors.count, "error") %> prohibited this entry from being saved:</h2>
+    <div id='error_explanation'>
+      <h2><%= pluralize(@entry.errors.count, 'error') %> prohibited this entry from being saved:</h2>
 
       <ul>
       <% @entry.errors.full_messages.each do |message| %>
@@ -11,15 +11,16 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class='field'>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
-  <div class="field">
+  <div class='field'>
     <%= f.label :message %><br>
     <%= f.text_area :message %>
   </div>
-  <div class="actions">
-    <%= f.submit "Create Entry", :class => 'submit-button' %>
+  <div class='actions'>
+    <%= f.submit 'Create Entry', :class => 'submit-button' %>
   </div>
+  
 <% end %>
